# foo_app

./: CMakeLists.txt  Makefile  meson.build
.cache/clangd/index/: foo.c.76090C2DA4A86B53.idx  main.c.27166BF4281BEFE8.idx
src/: foo.c  main.c  main.h  types.h
src/core/: main.c  main.h
